@@ -3,10 +3,11 @@
  - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
  - C++20 is now the oldest C++ version that libpqxx supports.
  - Retired `binarystring` and its headers.  Use `blob` instead.
- - Retired result row slicing.
  - Retired `connection_base` type alias.  Use `connection`.
  - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
- - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params` instead.
+ - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params`.
+ - Retired deprecated `stream_to` constructors.  Use factory functions.
+ - Retired result row slicing.
  - Assume compiler supports concepts.
  - Assume compiler supports integral conversions in `charconv`.
  - Assume compiler supports spans, ranges, and `cmp_less` etc.
